# inf-1600-intro-ai

./: .gitignore  README.md  inf-1600-intro-ai.code-workspace  main.py  pyproject.toml
data/: david_foster_wallace_this_is_water.txt  finland_prime_minister_un_speech_2025.txt  kong_harald_tale_hagefest_2016.txt  lise_klaveness_speech_fifa_2022.txt  noisy_heart_rate_time_series.csv  simple_acc_hr_dataset_v2.csv  synthetic_smart_watch_data.csv
jupyter/: create_noisy_hr_timeseries.ipynb  create_simple_acc_hr_dataset_v2.ipynb  demo_nlp_extract_features.ipynb  ngram_text_generator.ipynb  recurrent_network_noisy_timeseries_v3_plotly.ipynb  word_embedding_similarity_visualization.ipynb
jupyter/drafts/: create_simple_acc_hr_dataset.ipynb  manual_perceptron.ipynb  manual_perceptron.py  recurrent_network_noisy_timeseries.ipynb  recurrent_network_noisy_timeseries.py  recurrent_network_noisy_timeseries_v2.ipynb  recurrent_network_noisy_timeseries_v3.ipynb
marimo/: manual_perceptron_demo.py  manual_rnn_demo.py  perceptron_demo.py  rnn_demo.py
marimo/drafts/: compare_reactive_plots.py  manual_perceptron_draft.py  perceptron_demo_draft.py
