[project]
name = "inf-1600-intro-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.30.1",
    "marimo>=0.15.5",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "ruff>=0.13.1",
    "scikit-learn>=1.7.2",
]
